@@ -212,6 +212,8 @@ public class DevMojo extends AbstractMojo {
     @Parameter(defaultValue = "${debug}")
     private String debug;
 
+    @Parameter(defaultValue = "${open-lang-package}")
+    private boolean openJavaLang;
     /**
      * Whether or not the JVM launch, in debug mode, should be suspended. This parameter is only
      * relevant when the JVM is launched in {@link #debug debug mode}. This parameter supports the
@@ -954,6 +956,11 @@ public class DevMojo extends AbstractMojo {
         setJvmArgs(builder);
         if (windowsColorSupport) {
             builder.jvmArgs("-Dio.quarkus.force-color-support=true");
+        }
+
+        if (openJavaLang) {
+            builder.jvmArgs("--add-opens");
+            builder.jvmArgs("java.base/java.lang=ALL-UNNAMED");
         }
 
         builder.projectDir(project.getFile().getParentFile());
